--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,5 @@ typing_extensions==4.12.2
 urllib3==2.2.1
 whitenoise[brotli]>=6,<7
 gunicorn>=22,<23
-psycopg2
+psycopg2psycopg2>=2.9.9
 python-decouple
