--- a/techniques_app/fixtures/techniques.yaml
+++ b/techniques_app/fixtures/techniques.yaml
@@ -2,11 +2,11 @@
 - model : techniques_app.Technique
   pk : d49c3d51-bada-46f0-97b6-ea4cef023ddc
   fields:
-    name : "Body self soothing"
+    name : "Body self-soothing"
     component : 0
-    text : "When your client if feeling a bit overwhelmed, you can suggest (as you also do it to make it less ackward), to self-massage shoulders and arms, as you guide a more relaxed breathing pattern"
+    text : "When your client is feeling a bit overwhelmed, you can suggest, to softly and carefully, put their hand on their shoulders, and self-massage, moving towards the arms. You should do the same, as you guide a more relaxed breathing pattern"
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -18,7 +18,7 @@
     component : 1
     text : "Observe the breathing patterns of your client and body movements. When they are describing something difficult you can 'mirror' back with words the feeling pattern you are seeing, like 'I feel you are slightly anxious, as I see you are breathing like (I show)'. This may help to name feelings still not in awareness"
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -41,9 +41,9 @@
   fields:
     name : "Helping clients to express emotions through voice"
     component : 2
-    text : "You can help your clients to express emotions by adding colour and tone to the voice. You can model entonation to a phrase that seems particulary charged, so they can try expressive tones."
+    text : "You can help your clients to express emotions by adding color and tone to the voice. You can model intonation to a phrase that seems particularly charged, so they can try expressive tones."
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -53,9 +53,9 @@
   fields:
     name : "Finding the narrative ark"
     component : 4
-    text : "When you are listening to a story, try to find narrative patterns, a protagonist and antagonist, and the mythem, the path the narrative seems to be going to. Use images from pop culture to ground it."
+    text : "When you are listening to a story, try to find narrative patterns, a protagonist and antagonist, and the mytheme, the path the narrative seems to be going to. Use images from pop culture to ground it."
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -65,9 +65,9 @@
   fields:
     name : "Using Active Imagination"
     component : 5
-    text : "Help your client to relax, I use breathing and body awareness to begin. As they relax I guide their conciousness to different parts of the body with a soft voice. When they are following in a soft transe, I ask them to follow the body feelings and allow imagination to make shapes. There can emerge characters, memories, or imaginary creations you can explore with them."
+    text : "Help your client to relax, I use breathing and body awareness to begin. As they relax I guide their consciousness to different parts of the body with a soft voice. When they are following in a soft trance, I ask them to follow the body's feelings and allow imagination to make shapes. There can emerge characters, memories, or imaginary creations you can explore with them."
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -77,9 +77,9 @@
   fields:
     name : "Associating a good inner space with an object"
     component : 6
-    text : "Start by asking them to chose an object they could bring with them everywhere, like a nice stone. Then guide them visualising a real or imaginary peaceful place. As they hold the object you ask them to keep remembering the image every time they touch it."
+    text : "Start by asking them to choose an object they could bring with them everywhere, like a nice stone. Then guide them to visualising a real or imaginary peaceful place. As they hold the object you ask them to keep remembering the image every time they touch it."
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -89,9 +89,9 @@
   fields:
     name : "Using stories to convey a deeper meaning"
     component : 7
-    text : "An old Eriksonian trick is to narrate things associated with the topic to speak to the unconcious. I allow my emotional state to be sync with my clients, and in that way my memories come with similar topics. Then I tell a story of my life asociated to my clients (a story I feel I have worked on), and add some of my own reflections and emotinoal processes (to model and speak to the unconcious of the client)."
+    text : "An old Eriksonian trick is to narrate things associated with the topic to speak to the unconscious. I allow my emotional state to be in sync with my clients, and in that way, my memories come with similar topics. Then I tell a story of my life associated with my clients (a story I feel I have worked on), and add some of my own reflections and emotional processes (to model and speak to the unconscious of the client)."
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -101,9 +101,9 @@
   fields:
     name : "Empty chair"
     component : 8
-    text : "When my clients are moving between two states, or conflicting impulses, I ask them to imagine one of the parts seating in an empty chair. Then I invite them to sit as if they are the other vioce, and I dialogue with them. I also allow them to talk between them by changing chairs."
+    text : "When my clients are moving between two states or conflicting impulses, I ask them to imagine one of the parts sitting in an empty chair. Then I invite them to sit as if they are the other voice, and I dialogue with them. I also allow them to talk between them by changing chairs."
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -113,9 +113,9 @@
   fields:
     name : "mindfulness and subtle body"
     component : 9
-    text : "A variaton of active imagination. I help my client to feel more relaxed and calm, by breathing and connecting with their bodies. Then I guide their awareness towards their bodies, from feet to head. Once I arrive to the head I ask to observe the body as a whole. Then to look for parts that have a texture, colour or form. Some clients can see patters and movements in their bodies that are representative of their feelings and deeper processes."
+    text : "A variation of active imagination. I help my client to feel more relaxed and calm, by breathing and connecting with their bodies. Then I guide their awareness towards their bodies, from feet to head. Once I arrive at the head I ask to observe the body as a whole. Then to look for parts that have a texture, color or form. Some clients can see patterns and movements in their bodies that are representative of their feelings and deeper processes."
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -125,9 +125,9 @@
   fields:
     name : "using projective identification"
     component : 10
-    text : "Relax as you listen to your client, allowing your body/mind to resonate with them. You can observe your memories and body emotions, and notice if some of them seem to be coming from what your client is narrating. Some intense emotions feel like they do not belong to you and your story. Recognise that feeling and try to name it in a way that helps your client to gain awareness 'what you just said seem quite intense, I had a sense of despair and fragmentation, what did you feel when you said it?'"
+    text : "Relax as you listen to your client, allowing your body/mind to resonate with them. You can observe your memories and body emotions, and notice if some of them seem to be coming from what your client is narrating. Some intense emotions feel like they do not belong to you and your story. Recognize that feeling and try to name it in a way that helps your client to gain awareness 'What you just said seems quite intense, I had a sense of despair and fragmentation, what did you feel when you said it?'"
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -137,9 +137,9 @@
   fields:
     name : "Using stones to map client's system"
     component : 11
-    text : "I have a pouch of different stones in my office. When a client is narrating something that involves multiple people or areas, I bring the stones and ask to map them, by chosing one that represent them and place others relative to the first stone."
+    text : "I have a pouch of different stones in my office. When a client is narrating something that involves multiple people or areas, I bring the stones and ask to map them, by choosing one that represents them and placing others relative to the first stone."
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
 
@@ -147,10 +147,10 @@
 - model : techniques_app.Technique
   pk : 627bfcd2-385d-4b71-a55f-cc902407a4ea 
   fields:
-    name : "setting clear boundaries as part of the process"
+    name : "Setting clear boundaries as part of the process"
     component : 12
-    text : "Charging, starting, ending a session are part of the set-up. Some clients experiment them as punishments or prices, and it is important to notice how they are experiencing a boundary. I try to end the sessions softly, sometimes saying 'we are close to the end', sometimes looking at the clock. I always stand up and walk with them to the door, to mark the transition."
+    text : "Charging, starting, and ending a session is part of the set-up. Some clients experiment with them as punishments or prices, and it is important to notice how they are experiencing a boundary. I try to end the sessions softly, sometimes saying 'We are close to the end', sometimes looking at the clock. I always stand up and walk with them to the door, to mark the transition."
     notes : "added by CreaTherapy"
-    user : 1 #Gabriel
+    user : 0 #Gabriel
     date_made : "2024-05-30"
     share : True
