--- a/between/requirements.txt
+++ b/between/requirements.txt
@@ -1,14 +1,18 @@
 # requirements.txt
 
 asgiref==3.8.1
+Brotli==1.1.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
 dj-database-url==2.2.0
 Django==5.0.6
 django-allauth==0.63.3
 django-bootstrap5==24.2
+gunicorn==22.0.0
 idna==3.7
+packaging==24.1
 pillow==10.3.0
+psycopg2==2.9.9
 python-decouple==3.8
 PyYAML==6.0.1
 requests==2.32.3
@@ -16,3 +20,4 @@ resend==2.1.0
 sqlparse==0.5.0
 typing_extensions==4.12.2
 urllib3==2.2.1
+whitenoise==6.6.0
