--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,34 @@
 # requirements.txt
 
 asgiref==3.8.1
+attrs==23.2.0
+Brotli==1.1.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
-dj-database-url>=2,<3
-django>=5.0,<5.1
-django-allauth==0.63.3
+dj-database-url==2.2.0
+Django==5.0.7
+django-allauth==0.63.6
 django-bootstrap5==24.2
+gunicorn==22.0.0
+h11==0.14.0
 idna==3.7
+outcome==1.3.0.post0
+packaging==24.1
 pillow==10.3.0
+psycopg2==2.9.9
+PySocks==1.7.1
 python-decouple==3.8
 PyYAML==6.0.1
 requests==2.32.3
 resend==2.1.0
+selenium==4.22.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 sqlparse==0.5.0
+trio==0.26.0
+trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.1
-whitenoise[brotli]>=6,<7
-gunicorn>=22,<23
-psycopg2>=2.9.9
-python-decouple
-selenium >= 4.8.0
+websocket-client==1.8.0
+whitenoise==6.6.0
+wsproto==1.2.0
