--- a/between/requirements.txt
+++ b/between/requirements.txt
@@ -29,6 +29,7 @@ requests==2.32.3
 requests-oauthlib==2.0.0
 resend==2.4.0
 selenium==4.25.0
+sentry-sdk==2.15.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 sqlparse==0.5.1
