--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,17 @@ requires-python = ">=3.12"
 dependencies = [
 
     "asgiref==3.8.1",
-    "attrs==25.1.0",
+    "attrs==25.3.0",
     "Brotli==1.1.0",
     "certifi==2025.1.31",
     "cffi==1.17.1",
     "charset-normalizer==3.4.1",
-    "cryptography==44.0.1",
+    "cryptography==44.0.2",
     "dj-database-url==2.3.0",
     "Django==5.1.5",
-    "django-allauth==65.4.1",
-    "django-bootstrap5==24.3",
+    "django-allauth==65.5.0",
+    "django-allauth[mfa]",
+    "django-bootstrap5==25.1",
     "django-debug-toolbar==5.0.1",
     "gunicorn==23.0.0",
     "h11==0.14.0",
@@ -34,13 +35,13 @@ dependencies = [
     "requests==2.32.3",
     "requests-oauthlib==2.0.0",
     "resend==2.6.0",
-    "selenium==4.28.1",
-    "sentry-sdk==2.21.0",
+    "selenium==4.29.0",
+    "sentry-sdk==2.22.0",
     "sniffio==1.3.1",
     "sortedcontainers==2.4.0",
     "sqlparse==0.5.3",
     "trio==0.29.0",
-    "trio-websocket==0.11.1",
+    "trio-websocket==0.12.2",
     "typing_extensions==4.12.2",
     "urllib3==2.3.0",
     "websocket-client==1.8.0",
