--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-
     "asgiref==3.8.1",
     "attrs==25.3.0",
     "Brotli==1.1.0",
@@ -15,10 +14,11 @@ dependencies = [
     "cryptography==44.0.2",
     "dj-database-url==2.3.0",
     "Django==5.1.5",
-    "django-allauth==65.5.0",
+    "django-allauth==65.6.0",
     "django-allauth[mfa]",
     "django-bootstrap5==25.1",
-    "django-debug-toolbar==5.0.1",
+    "django-browser-reload>=1.18.0",
+    "django-debug-toolbar==5.1.0",
     "gunicorn==23.0.0",
     "h11==0.14.0",
     "idna==3.10",
@@ -34,9 +34,9 @@ dependencies = [
     "PyYAML==6.0.2",
     "requests==2.32.3",
     "requests-oauthlib==2.0.0",
-    "resend==2.6.0",
-    "selenium==4.29.0",
-    "sentry-sdk==2.22.0",
+    "resend==2.7.0",
+    "selenium==4.30.0",
+    "sentry-sdk==2.24.1",
     "sniffio==1.3.1",
     "sortedcontainers==2.4.0",
     "sqlparse==0.5.3",
@@ -46,5 +46,5 @@ dependencies = [
     "urllib3==2.3.0",
     "websocket-client==1.8.0",
     "whitenoise==6.9.0",
-    "wsproto==1.2.0"
+    "wsproto==1.2.0",
 ]
