--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,45 +5,18 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "asgiref==3.8.1",
-    "attrs==25.3.0",
-    "Brotli==1.1.0",
-    "certifi==2025.1.31",
-    "cffi==1.17.1",
-    "charset-normalizer==3.4.1",
-    "cryptography==44.0.2",
-    "dj-database-url==2.3.0",
-    "Django==5.1.5",
-    "django-allauth==65.7.0",
+    "django==5.2.2",
+    "django-allauth==65.9.0",
     "django-allauth[mfa]",
     "django-bootstrap5==25.1",
     "django-browser-reload>=1.18.0",
-    "django-debug-toolbar==5.1.0",
+    "django-debug-toolbar==5.2.0",
     "gunicorn==23.0.0",
-    "h11==0.14.0",
-    "idna==3.10",
-    "oauthlib==3.2.2",
-    "outcome==1.3.0.post0",
-    "packaging==24.2",
     "pillow==11.2.1",
     "psycopg2==2.9.10",
-    "pycparser==2.22",
-    "PyJWT==2.10.1",
-    "PySocks==1.7.1",
     "python-decouple==3.8",
     "PyYAML==6.0.2",
-    "requests==2.32.3",
-    "requests-oauthlib==2.0.0",
-    "resend==2.7.0",
-    "sentry-sdk==2.26.1",
-    "sniffio==1.3.1",
-    "sortedcontainers==2.4.0",
-    "sqlparse==0.5.3",
-    "trio==0.29.0",
-    "trio-websocket==0.12.2",
-    "typing_extensions==4.12.2",
-    "urllib3==2.4.0",
-    "websocket-client==1.8.0",
+    "resend==2.10.0",
+    "sentry-sdk==3.0.0a1",
     "whitenoise==6.9.0",
-    "wsproto==1.2.0",
 ]
